[package]
name = "tuesday"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
home = "0.5.9"
nom = "7.1.3"
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml_ng = "0.10.0"
thiserror = "1.0.58"
