[package]
name = "tuesday_cli"
version = "0.1.3"
edition = "2021"

[dependencies]
tuesday_core = { path = "../core" }

anyhow = "1.0.82"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
home = "0.5.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.3"
yaml-rust2 = "0.9.0"

[[bin]]
name = "tuecli"
path = "src/main.rs"
