[package]
name = "tuesday_core"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
home = "0.5.9"
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml_ng = "0.10.0"
thiserror = "1.0.58"
yaml-rust2 = "0.8.1"

[lib]
name = "tuecore"
path = "src/lib.rs"
